Mostly finished updating current conditions

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -20,3 +20,11 @@ main h2 {
 .uvIndexItem {
     color: purple;
 }
+
+#currentConditionsContainer {
+    display: none;
+}
+
+#forecastConditionsContainer {
+    display: none;
+}
