--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -66,3 +66,15 @@ main h2 {
     filter: none;
     cursor: pointer;
   }
+
+  .custom-card {
+    max-width: 180px;
+  }
+
+  input {
+    max-width: 32vw;
+  }
+
+  /* .custom-container {
+    width: 10%;
+  } */
