--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -90,7 +90,7 @@ main h2 {
   }
 
   .customRightArea {
-    /* display:none; */
+    display:none;
     border: 2px solid black;
     border-radius: 25px;
     padding-top: 10px;
