--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -59,46 +59,51 @@ main h2 {
     transition: all 0.15s ease-in-out;
     filter: none;
     cursor: pointer;
-  }
+}
 
-  .custom-card {
-    max-width: 180px;
-  }
+.custom-card {
+max-width: 180px;
+}
 
-  input {
-    width: 100%;
-    max-width: 200px;
-    font-size: 12px;
-  }
+input {
+width: 100%;
+max-width: 200px;
+font-size: 12px;
+}
 
-  /* .custom-container {
-    width: 10%;
-  } */
+/* .custom-container {
+width: 10%;
+} */
 
-  .cityCard {
-    font-size: 16px
-  }
+.cityCard {
+font-size: 16px
+}
 
-  .customLeftArea {
-    border: 2px solid black;
-    border-radius: 25px;
-    margin: 5px;
-    height: 85vh;
-    padding: 10px;
-    background-color: blanchedalmond;
-    background-image: linear-gradient(to bottom right, rgb(255, 255, 190), rgb(255, 255, 255));
-  }
+.customLeftArea {
+border: 2px solid black;
+border-radius: 25px;
+margin: 5px;
+height: fit-content;
+padding: 10px;
+background-color: blanchedalmond;
+background-image: linear-gradient(to bottom right, rgb(255, 255, 190), rgb(255, 255, 255));
+}
 
-  .customRightArea {
-    display:none;
-    border: 2px solid black;
-    border-radius: 25px;
-    padding-top: 10px;
-    margin: 5px;
-    width: 100%;
-    background-image: linear-gradient(to bottom right, rgb(255, 255, 190), rgb(255, 255, 255));
-  }
+.customRightArea {
+display:none;
+border: 2px solid black;
+border-radius: 25px;
+padding-top: 10px;
+margin: 5px;
+width: 100%;
+background-image: linear-gradient(to bottom right, rgb(255, 255, 190), rgb(255, 255, 255));
+}
 
-  .searchStyling {
-    font-weight: bolder;
-  }
+.searchStyling {
+font-weight: bolder;
+}
+
+footer {
+    text-align: center;
+    color: white;
+}
