--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -84,6 +84,7 @@ border: 2px solid black;
 border-radius: 25px;
 margin: 5px;
 height: fit-content;
+min-height: 80vh;
 padding: 10px;
 background-color: blanchedalmond;
 background-image: linear-gradient(to bottom right, rgb(255, 255, 190), rgb(255, 255, 255));
