--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3,8 +3,10 @@
 }
 
 header {
-    background-color: blue;
-    color: white;
+    background-image: linear-gradient(to right, rgb(0, 76, 255) , rgb(0, 255, 115));    color: white;
+    text-align: center;
+    text-shadow: 0px 0px 3px black,0px 0px 6px black,0px 0px 10px black;
+
 }
 
 body {
